# trailmix

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: auto-label-new-issues.yml  macos-latest.yml  ubuntu-latest.yml  windows-latest.yml
include/trailmix/file/: fileutils.hpp
src/: main.cpp  trailmix-main.cpp
src/file/: filewriter.cpp
src/text/: stringutils.cpp
src/trailmix/file/: filereader.cpp  filereader.hpp  fileutils.cpp  fileutils.hpp  filewriter.cpp  filewriter.hpp  yaml.cpp  yaml.hpp
src/trailmix/internal/: hash_combine.hpp  test-headers.cpp
src/trailmix/math/: bresenham.cpp  bresenham.hpp  colour.cpp  colour.hpp  comparison.cpp  comparison.hpp  conversion.cpp  conversion.hpp  flags.cpp  flags.hpp  hash_combine.hpp  manipulation.cpp  manipulation.hpp  mathutils.cpp  mathutils.hpp  misc.cpp  misc.hpp  perlin.cpp  perlin.hpp  poisson.cpp  poisson.hpp  prand.cpp  prand.hpp  random.cpp  random.hpp  rect.hpp  rotation.cpp  rotation.hpp  scientific-notation.cpp  scientific-notation.hpp  vector2.hpp  vector3.hpp  voronoi.cpp  voronoi.hpp
src/trailmix/sys/: binpath.cpp  binpath.hpp  process.cpp  process.hpp
src/trailmix/text/: ansiutils.cpp  ansiutils.hpp  comparison.cpp  comparison.hpp  conversion.cpp  conversion.hpp  formatting.cpp  formatting.hpp  hash.cpp  hash.hpp  manipulation.cpp  manipulation.hpp  map_string.cpp  map_string.hpp  set-string.hpp  set_string.hpp  stringutils.cpp  stringutils.hpp
src/trailmix/time/: timer.cpp  timer.hpp
